# FF-Manager-public-

./: .gitignore  README copy.md  README_ja.md  pyproject.toml
src/ff_manager/: config.py  main.py
src/ff_manager/core/: constants.py
src/ff_manager/db/: aggregate.py  connection.py  migrations.py
src/ff_manager/db/repositories/: items_repo.py  metrics_repo.py  ocr_repo.py
src/ff_manager/scripts/manual/: manual_main_window.py
src/ff_manager/services/: chart_service.py  metrics_service.py
src/ff_manager/services/ocr/: fakes.py  metrics.py  ocr_adapter.py  paddle_engine.py  paddle_engine_table.py  preprocess.py  service.py  types.py
src/ff_manager/tests_scripts/manual/: ocr_import.py  test_window.py  window_ui.py
src/ff_manager/tests_scripts/ocr/: paddle_table.py
src/ff_manager/ui/: charts_widget.py  edit_grid_widget.py  items_widget.py  main_window.py  menu_widget.py  ocr_import_widget.py  panels.py  styles.py
src/ff_manager/ui/edit_grid/: chart_area.py  edit_grid_widget.py  tables.py
src/ff_manager/ui/effects/: gradient_bg.py
src/ff_manager/ui/items/: items_widget.py
src/ff_manager/ui/items_widget/: items_widget.py
src/ff_manager/ui/menu/: menu_widget.py
src/ff_manager/ui/menu_widget/: menu_widget.py
src/ff_manager/ui/ocr_import/: ocr_import_widget.py
src/ff_manager/ui/styles/: theme.py  widgets.qss
src/ff_manager/ui/utils/: image.py
