[tool.poetry]
name = "ff-manager"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ff_manager", from = "src" }]
include = ["src/ff_manager/resources/**"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = ">=6.9,<7"
matplotlib = ">=3.8,<4"
ffm-ocr = { path = "packages/ffm_ocr", develop = false }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
black = "^24.0"
pytest = "^8.0"

[tool.poetry.scripts]
ff-manager = "ff_manager.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
